--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Gov 50 Final Project"
 author: "Nicholas Frumkin"
-description: "My final project"
+description: "Nick's Final Project"
 output:
   distill::distill_article:
     self_contained: false
@@ -11,4 +11,4 @@ output:
 
 ## Project thoughts
 
-I am interested in exploring data related to historical trends in voter supression. 
+I am interested in exploring data related to historical trends in voter supression. Might try to do it with a state-wide or national-wide scope.  
