--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Gov 50 Final Project"
 author: "Nicholas Frumkin"
-description: "Nick's Final Project"
+description: "Nick's Final Project draft 1"
 output:
   distill::distill_article:
     self_contained: false
